--- a/localization/english/eocfm_events_l_english.yml
+++ b/localization/english/eocfm_events_l_english.yml
@@ -19,7 +19,7 @@
 
  eocfm.010.t: "Ecumenical Reforms"
  eocfm.010.d: "The Eastern Orthodox Church is the one true successor to the Great Church founded by Jesus Christ. Yet, with its decentralized structure, deviations have developed between the various churches over the centuries. A cohort of bishops have requested state support in implementing some liturgical changes in the interest of better aligning ourselves with the rest of the Orthodox family."
- eocfm.010.f: "With the ebb and flow of Patriarchal influence over the church at large, minor differences have developed within the Orthodox church that have often led to minor schisms. While this may upset more traditionalist segements of the clergy, many argue that the Church structure is as much at risk of disintegration as that of the Sultan."
+ eocfm.010.f: "With the ebb and flow of Patriarchal influence over the church at large, minor differences have developed within the Orthodox church that have often led to minor schisms. While this may upset more traditionalist segements of the clergy, many argue that the Church structure is as much at risk of disintegration as that of the Basileus."
  eocfm.010.a: "They will have state backing."
  eocfm.010.b: "We will not abandon our traditions."
  eocfm.010.tt: "#red This will impede any attempts to #bold Reform the Synod#! for several years.#!"
@@ -134,14 +134,14 @@
  eocfm.102.a: "The King shall be our spiritual protector."
  eocfm.103.t: "The Metropolitanate of Cetinje"
  eocfm.103.d: "Through the efforts of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle], the bishop of [ROOT.GetCountry.GetCapital.GetCityHubName] has been christened as the supreme ecclesiastical authority in [ROOT.GetCountry.GetName]."
- eocfm.103.f: "It might be seen as a technicality by the non-Orthodox Christians, but this will help insulate us from further interference by the Ottoman state."
+ eocfm.103.f: "It might be seen as a technicality by the non-Orthodox Christians, but this will help insulate us from further interference by the Romaíon state."
  eocfm.103.a: "We will protect the faithful."
  eocfm.104.t: "The Metropolitanate of Belgrade"
  eocfm.104.d: "Following protracted negociations between [ROOT.GetCountry.GetName] and the Ecumenical Patriarchate, the Bishop of [ROOT.GetCountry.GetCapital.GetName] has been given charge over the Serbian Church."
  eocfm.104.f: "The only way to safeguard our cultural and identity as Serbians is to take control of our spiritual affairs, regardless of the complaints of the Patriarchates."
  eocfm.104.a: "We will safeguard the Serbian faithful."
  eocfm.105.t: "The Patriarch of All [ROOT.GetCountry.GetName]"
- eocfm.105.d: "Following immense efforts by our clergy, the Excharcate of Bulgaria, orginally a fabrication on the order of the Sultan, has been recognized as the one true Church of the Bulgarian nation."
+ eocfm.105.d: "Following immense efforts by our clergy, the Excharcate of Bulgaria, orginally a fabrication on the order of the Basileus, has been recognized as the one true Church of the Bulgarian nation."
  eocfm.105.f: ""An ecclesiastical district will be formed under the name of the Bulgarian Exarchy, which will encompass the metropolitan areas, bishoprics and some other places listed below, and the management of the ecclesiastical affairs of this district will be entrusted entirely to the exarchy. -Firman establishing the Bulgarian Excharcate, 1870"
  eocfm.105.a: "We will safeguard this high office."
  eocfm.106.t: "The Patriarchate of [ROOT.GetCountry.GetName]"
@@ -281,13 +281,13 @@
  
  eocfm.140.t: "Seat Integration Disputed (Part 1)"
  eocfm.140.d: "The unilateral move by [SCOPE.sCountry('eocfm_integrator_scope').GetName] to realign one of the patriarchal seats to their control has provoked outrage amongst the clergy. Many of our bishops have peitioned the government for a strong response, arguing that any assertion of control a [concept_patriarchal_seat] directly threatens our [concept_autocephaly]."
- eocfm.140.f: "Since the fall of Constantinople, the Orthodox churches, especially under Ottoman rule, have enjoyed relative independence from direct state administration. Any attempt to directly subordinate the church to political administration is bound to draw detractors."
+ eocfm.140.f: "The Orthodox churches, have enjoyed relative independence from direct state administration. Any attempt to directly subordinate the church to political administration is bound to draw detractors."
  eocfm.140.a: "We will support their claim."
  eocfm.140.b: "This goes against the order of things."
  eocfm.141.t: "Seat Integration Disputed (Part 2)"
  eocfm.141.d1: "Despite our legitmate rights to exercise control over the faith, [SCOPE.sCountry('eocfm_disputer_scope').GetName] has disputed our rights to integrate the [concept_patriarchal_seat]."
  eocfm.141.d2: "In a surprising turn of events, [SCOPE.sCountry('eocfm_disputer_scope').GetName] has endorsed our intent to integrate a [concept_patriarchal_seat] into our ecclesiastic administration."
- eocfm.141.f: "For centuries the ecclesiastic structure has remained inflexible, contributing it its slow decay under the Ottoman rule. In taking a fragment of the church under our care, we have the chance to reinvigorate the faith."
+ eocfm.141.f: "For centuries the ecclesiastic structure has remained inflexible, contributing it its slow decay under the Romaíon rule. In taking a fragment of the church under our care, we have the chance to reinvigorate the faith."
  eocfm.141.a: "Our Metropolitan will not back down."
  eocfm.141.b: "Perhaps we should listen to our Patriarchs..."
  eocfm.141.c: "Wonderful News!"
@@ -305,7 +305,7 @@
  
  eocfm.160.t: "An Audience with the Patriarch"
  eocfm.160.d: "[ROOT.GetCountry.GetRuler.GetFullName] has been graciously hosted by the Ecumenical Patriarch, [SCOPE.sCharacter('eocfm_patriarch_event_scope').GetFirstName]. After a pompous ceremony and a coreographed event featuring a dicussion of "common values and religious ties" between the countries of the [GetReligion('orthodox').GetName], [ROOT.GetCountry.GetRuler.GetLastName] has met with the Patriarch to seek his blessings for the nation."
- eocfm.160.f: "Throughout the centuries of domination by the Ottomans, the Church has served as the common force holding the peoples of the Balkans together. By seeking "divine" approval, our leaders can instill confidence in our governance."
+ eocfm.160.f: "The Church has served as the common force holding the peoples of the Balkans together. By seeking "divine" approval, our leaders can instill confidence in our governance."
  eocfm.160.1: "God, bless us with decisive leadership."
  eocfm.160.2: "Lord, bless us with good governance."
  eocfm.160.3: "Father, bless us with grace in diplomacy."
@@ -327,8 +327,8 @@
  eocfm.167.b: "They make a good point."
  eocfm.167.tt: "The current Ecumenical Patriarch will be replaced."
  eocfm.168.t: "Ecumenical Patriarch Deposed"
- eocfm.168.d: "The Sultan has issued a firman deposing the Ecumenical Patriarch. Whatever his reasons, this has disrupted the orderly functioning of the Church at large."
- eocfm.168.f: "While the Patriarch may been selected from within the Orthodoxy, his reign remains subject to the approval of the Sultan."
+ eocfm.168.d: "The Basileus has issued a firman deposing the Ecumenical Patriarch. Whatever his reasons, this has disrupted the orderly functioning of the Church at large."
+ eocfm.168.f: "While the Patriarch may been selected from within the Orthodoxy, his reign remains subject to the approval of the Basileus."
  eocfm.168.a: "So be it."
  eocfm.169.t: "The Living Law"
  eocfm.169.d: "With power over the state centralized around [ROOT.GetCountry.GetRuler.GetFullName] and the [GetReligion('orthodox').GetName] faith enshrined above all others, the Ecumenical Patriarch, has recognized the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] as the divinely ordained ruler of [ROOT.GetCountry.GetName]."
@@ -341,7 +341,7 @@
  eocfm.170.a: "Spineless Zealot."
  eocfm.171.t: "Theological Dispute with Patriarch"
  eocfm.171.d: "Metropolitan [GetInterestGroupVariant('ig_devout',GetPlayer).GetLeader.GetFirstName] has become embroiled in a theological dispute with [SCOPE.sCharacter('eocfm_patriarch_event_scope').GetFirstName], the Patriarch of [SCOPE.GetRootScope.GetCountry.GetCustom('eocfm_seat_event_type')] leading to accusations of heresy on the part of the state church."
- eocfm.171.f: "From the Septuagint to the Julian calendar, the Orthodoxy clings to the traditions that have allowed it to survive domination by the Ottoman state."
+ eocfm.171.f: "From the Septuagint to the Julian calendar, the Orthodoxy clings to its traditions."
  eocfm.171.a: "We should seek compromise."
  eocfm.171.b: "He has no authority in [ROOT.GetCountry.GetName]."
  
@@ -366,12 +366,12 @@
  eocfm.183.a: "What does [SCOPE.sCharacter('eocfm_patriarch_event_scope').GetFirstName] know of our people?"
  eocfm.183.b: "Perhaps we could assuage his concerns."
  eocfm.184.t: "Liturgical Language"
- eocfm.184.d: "[GetCulture('hellene').GetName] Phanariot bishops in [ROOT.GetCountry.GetCapital.GetCityHubName] have caused an uproar by imposing Greek as the primary language in both school and religions. The church is the only means by which our [GetCulture('eocfm_primary_culture_scope').GetName] language has survived Ottoman domination. Should they have their way, the very idea of a [GetCulture('eocfm_primary_culture_scope').GetName] state may be swept to the wind."
+ eocfm.184.d: "[GetCulture('greek').GetName] Phanariot bishops in [ROOT.GetCountry.GetCapital.GetCityHubName] have caused an uproar by imposing Greek as the primary language in both school and religions. The church is the only means by which our [GetCulture('eocfm_primary_culture_scope').GetName] language has survived Romaíoi domination. Should they have their way, the very idea of a [GetCulture('eocfm_primary_culture_scope').GetName] state may be swept to the wind."
  eocfm.184.f: "Almost as if to make up for their loss of prestige after the Greek War of Independence, the Phariotes seem set on assimilating the entirety of the Balkans into a singular Greek church."
- eocfm.184.a: "Request that the Sultan right this travesty."
+ eocfm.184.a: "Request that the Basileus right this travesty."
  eocfm.184.b: "We shouldn't challenge the primacy of Constantinople."
  eocfm.185.t: "Ecclesiatic Purges"
- eocfm.185.d: "In defense of our [GetCulture('eocfm_primary_culture_scope').GetName] identity, [GetCulture('hellene').GetName] bishops have been subjected to incredible harassment by both clergy and layperson alike. Slowly but surely, bishop after bishop has returned to Ottoman lands to seek friendlier appointments. It may serve us well to better organize these efforts."
+ eocfm.185.d: "In defense of our [GetCulture('eocfm_primary_culture_scope').GetName] identity, [GetCulture('greek').GetName] bishops have been subjected to incredible harassment by both clergy and layperson alike. Slowly but surely, bishop after bishop has returned to Romaíoi lands to seek friendlier appointments. It may serve us well to better organize these efforts."
  eocfm.185.f: "The [GetCulture('eocfm_primary_culture_scope').GetName] churchs have been firmly under the control of Constantinople. As a means of suppressing our identity, they have systematically blocked the appointment of native-[GetCulture('eocfm_primary_culture_scope').GetName] bishops to our lands.
  eocfm.185.a: "Our people will not fall to such underhanded tricks."
  eocfm.185.b: "The Church must remain clean of politics."
@@ -421,7 +421,7 @@
  eocfm.304.a: "All faithful shall be sheltered by the Patriarchs."
  eocfm.304.b: "The Eastern Church is whole, let us count our blessings."
  eocfm.305.t: "The Orthodox Realms"
- eocfm.305.d: "When Constantinople fell to the Ottomans in 1453, there was hope that the Grand Duchy of Moscow would ride to save the seat of Christendom. No such aid ever came. Despite this, the Russian [SCOPE.sCountry('russia_scope').GetRuler.GetPrimaryRoleTitle], [SCOPE.sCountry('russia_scope').GetRuler.GetFullName] claims a protectorate over the Christians in the Balkans and, by extension, the [ROOT.GetCountry.GetName]."
+ eocfm.305.d: "The Russian [SCOPE.sCountry('russia_scope').GetRuler.GetPrimaryRoleTitle], [SCOPE.sCountry('russia_scope').GetRuler.GetFullName] claims a protectorate over the Christians in the Rus and, by extension, the [ROOT.GetCountry.GetName]."
  eocfm.305.f: ""So know, pious king, that all the Christian kingdoms came to an end and came together in a single kingdom of yours, two Romes have fallen, the third stands, and there will be no fourth. No one shall replace your Christian Tsardom according to the great Theologian.""
  eocfm.305.a: "Constantinople is the true seat of the East."
  eocfm.306.t: "Across the Hospitable Sea"
