--- a/localization/english/eocfm_l_english.yml
+++ b/localization/english/eocfm_l_english.yml
@@ -53,7 +53,7 @@
  eocfm_considering_mandate_tt: "We are #bold not#! already considering a mandate from the Patriarch."
  eocfm_has_mandate_tt: "We do #bold not#! already have a mandate from the Patriarch."
  eocfm_rome_reclaimed_tt: "The Patriarchate of Rome is controlled by an #yellow Orthodox Christian#! country."
- eocfm_turk_relations_tt: "We have #bold #green cordial#!#! relations or better with the #yellow Ottoman Empire#!."
+ eocfm_turk_relations_tt: "We have #bold #green cordial#!#! relations or better with #yellow Basileía Romaíon#!."
  
  eocfm_integration_lose_6: "We will lose #variable 6#! months of progress."
  eocfm_integration_gain_2: "We will gain #variable 2#! months of progress."
@@ -176,7 +176,7 @@
  notification_notification_eocfm_secularism_denounced_removed_name: "Denounciation of Secularism Withdrawn"
  notification_notification_eocfm_secularism_denounced_removed_desc: "Improvements in our standings with the Patriarch have resulted in the comdemnation of our state being voided."
  notification_notification_eocfm_deposition_declined_name: "Patriarchal Deposition Declined"
- notification_notification_eocfm_deposition_declined_desc: "The #bold Sultan#! has declined our request to depose the Ecumenical Patriarch."
+ notification_notification_eocfm_deposition_declined_desc: "The #bold Basileus#! has declined our request to depose the Ecumenical Patriarch."
  notification_notification_eocfm_lex_animata_lost_name: "Blessing of the Lex Animata Withdrawn"
  notification_notification_eocfm_lex_animata_lost_desc: "Given our recent legal reforms, the clergy have agreed that the state can no longer claim to be the holy purveyors of theological wisdom. As a result, we have lost the [concept_timed_modifier] #bold Nómos Émpsychos#!."
  
@@ -610,7 +610,7 @@
  eocfm_gui_metropolitan_name: "Metropolitan [GetPlayer.MakeScope.Var('eocfm_devout_leader_var').GetCharacter.GetLastName]"
  eocfm_gui_emphasize_unity_tt: "The Orthodoxy has tied our people together since the Fall of Constantinople. Our bishops could emphasize this common bond that supercedes nationaist thought.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_enforce_attendance_tt: "Many in our communities attend masses only for the holiest of days. We could empower social activists to "persuade" these people to participate more regularly in church services.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
- eocfm_gui_theologize_dogma_tt: "The theology of the Orthodoxy has remained stagnant since the Ottoman conquest. In its isolation from the West, the philosophy and dogma of the Church lags far behind the innovations of Europe, leaving it unsuited to guide the faithful into this new era.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
+ eocfm_gui_theologize_dogma_tt: "The theology of the Orthodoxy has remained stagnant for centuries. In its isolation from the West, the philosophy and dogma of the Church lags far behind the innovations of Europe, leaving it unsuited to guide the faithful into this new era.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_promote_ecumenism_tt: "As the early fathers said, we are one flock divided only by our disagreements over interpretations. We could pressure the church to reach out to its Western counterpart to seek some type of common understanding.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_metropolitan_focus_header: "Current Focus:"
  eocfm_gui_eocfm_focus_status: "[GetPlayer.MakeScope.GetCountry.GetCustom('eocfm_metropolitan_focus_type')]"
@@ -624,7 +624,7 @@
  eocfm_gui_commission_icon_tt: "We can use some of our influence over the Church to commission icons to inspire the faithful. These icons will endure for 10 years before needing replacement.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_dissolve_monasteries_tt: "Throughout our hinterland, there are several ancient monasteries that cling on by momentum alone. Administrators have advised that the functions of both the church and the state could be dramatically improved by shuttering several minor monasteries.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_restore_monasteries_tt: "As a result of the seizure of monastic estates, many clergy have found themselves destitute. Many would welcome some form of relief.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
- eocfm_gui_reform_synod_tt: "Caesaropapism, the idea of merging the church and state, has gained traction as a means of both protecting and enforcing our independent identity as a people. By subjugating the church to the state apparatus, we can insulate ourselves from further interference by the Sultan.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
+ eocfm_gui_reform_synod_tt: "Caesaropapism, the idea of merging the church and state, has gained traction as a means of both protecting and enforcing our independent identity as a people. By subjugating the church to the state apparatus, we can insulate ourselves from further interference by the Basileus.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_restore_synod_tt: "The act of subjugating the Church has had profound effects. Chafing under the yoke of the state, the Church has lost a lot of its former influence. If we wish, we could restore the independence of the clergy.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_grant_subsidies_tt: "The state could grant state subsidies to the Orthodox Church in the name of supporting the needs of the clergy... in exchange for their compliance.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_end_subsidies_tt: "Civic leaders decry the use of secular funds to provide for spiritual matters. While they make sound legal arguements, the church risks collapse without our continued intervention.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
@@ -660,7 +660,7 @@
  eocfm_mending_possible_tt: "It is now possible to attempt to mend the Great Schism."
  eocfm_gui_seek_mandate_tt: "The Orthodox people hold the positions of their Bishops in high regard. With a little manuvering, we could obtain the blessings of the Ecumenical Patriarch designating our administration as not only legitimate, but divine.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_has_constantinople_controller_approval_tt: "We have #green #bold Cordial#! or better#! [concept_relations] with the [concept_country] that controls the Ecumenical Patriarchate."
- eocfm_gui_demand_deposition_tt: "While the Ecumenical Patriarch claims seniority over Eastern Christianity, he remains an agent of the Sultan in his capacity as the #italic milletbashi#! of the #bold millet-i Rûm#!. As such, we can demand his replacement in exchange for increased cooperation with his replacement.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
+ eocfm_gui_demand_deposition_tt: "While the Ecumenical Patriarch claims seniority over Eastern Christianity, he remains an agent of the Basileus in Konstantinople. As such, we can demand his replacement in exchange for increased cooperation with his replacement.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_patriarch_deposed_cooldown_tt: "The #bold Ecumenical Patriarch#! has not been deposed within the last five years."
  
  # GUI Antioch Widget
