--- a/localization/english/br_buildings_l_english.yml
+++ b/localization/english/br_buildings_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  building_great_port: "Great Port"
  building_palace_complex: "Palace Complex"
- building_university_constantinople: "University of Konstantinople"
+ building_university_constantinople: "University of Konstantinopolis"
  building_university_athens: "Academy of Athens"
  building_libary_alexandria: "Libary of Alexandria"
  building_house_wisedom: "House Of Wisedom"
