--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -416,7 +416,7 @@
  STATE_MONTENEGRO: "Dioklea"
  STATE_NORTHERN_SERBIA: "Northern Serbia"
  STATE_SOUTHERN_SERBIA: "Southern Serbia"
- STATE_EASTERN_THRACE: "Konstantinople"
+ STATE_EASTERN_THRACE: "Konstantinopolis"
  STATE_HUDAVENDIGAR: "Optimatoi"
  STATE_AYDIN: "Opsikion"
  STATE_KONYA: "Anatolikon"
