--- a/localization/spanish/br_countries_l_spanish.yml
+++ b/localization/spanish/br_countries_l_spanish.yml
@@ -102,7 +102,16 @@
  br_vidin_ADJ: "Vidin"
  br_blacksea_colonies: "Blacksea Colonies"
  br_blacksea_colonies_ADJ: "Genonese"
+ br_benevento: "Benevento"
+ br_benevento_ADJ: "Benevento"
+ br_spoleto: "Spoleto"
+ br_spoleto_ADJ: "Spoleto"
+ br_ravenna: "Ravenna"
+ br_ravenna_ADJ: "Ravenna"
+ br_arelat: "Arelat Kingdom"
+ br_arelat_ADJ: "Burgundian"
 
+ #New World
  br_klein_venedig: "Klein-Venedig"
  br_klein_venedig_ADJ: "Welser"
  br_japanese_new_world: "Shinsekai Shokuminchi"
@@ -183,6 +192,16 @@
  dyn_c_byzantine_peoples_front: "Romaíon People's Front"
  dyn_c_peoples_front_of_byzantium: "People's Front of Romaíon"
  dyn_c_popular_front_of_byzantium: "Popular Front of Romaíon"
+
+ dyn_c_kurd_princes: "Kurdish Principalities"
+ dyn_c_kurd_princes_adj: "Kurdish"
+ dyn_c_english_lords: "English Lords"
+ dyn_c_english_lords_adj: "English"
+
+ dyn_c_deutschland_germany_name: "Deutschland"
+ dyn_c_germania_germany_name: "Germania"
+ dyn_c_alemannia_germany_name: "Alemannia"
+ dyn_c_lotharingia_germany_name: "Lotharingia"
 
 
  #Decentralized nations
